# nexus

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  ingest_test.txt  mock_emergency_doc.txt  n8n_job_workflow_plan.md  pyproject.toml  railway.json  render.yaml  reproduce_hang.py  test_llm.py  test_skill.py  uvicorn_log.txt  vercel.json  verify_sse.py
.github/workflows/: aws-deploy.yml  ci-evals.yml  ci.yml  deploy.yml
_agents/skills/code_quality/: SKILL.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.test  config.py  main.py  requirements.txt
backend/agents/: graph.py  nodes.py  skill_orchestrator.py  state.py  tools.py
backend/api/: middleware.py  routes_agents.py  routes_documents.py  routes_eval.py  routes_health.py  routes_history.py  routes_ingest.py  routes_query.py  routes_search.py  routes_skills.py  routes_tasks.py  security.py
backend/cache/: semantic_cache.py
backend/database/: chat.py  qdrant.py  supabase.py
backend/evaluation/: eval_manager.py  llm_judge.py  ragas_eval.py  regression_runner.py
backend/guardrails/: input_guard.py  models.py  output_guard.py
backend/ingestion/: chunker.py  cleaner.py  embedder.py  enricher.py  parser.py  pipeline.py  reaper.py  summarizer.py  upserter.py  worker.py
backend/observability/: alerting.py  cost_tracker.py  tracing.py
backend/retrieval/: audit.py  generator.py  reranker.py  searcher.py  self_rag.py
backend/scripts/: sync_skills.py
backend/skills/: registry.json
backend/skills/financial_analyst/: SKILL.md  metadata.json
backend/skills/researcher/: SKILL.md
backend/tests/: conftest.py  test_api.py  test_reliability_logic.py
docs/: KNOWLEDGE_ITEM_CODE_QUALITY.md  KNOWLEDGE_ITEM_COST_OPTIMIZATION.md  NEXUS_README.md  nexus.html
docs/planning/: cost-analysis.md  system-design-v1.md
docs/planning/milestones/: M1-foundation.md  M10-scale-ux.md  M2-ingestion.md  M3-retrieval.md  M4-basic-rag.md  (+6 more)
evals/: golden_dataset.json
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
scripts/: audit_round_4.py  debug_retrieval.py  download_models.py  duckdns-update.sh  flush_cache.py  smoke_test.py  test_ingest_auth.py  test_search.py  verify_golden_set.py  verify_libs.sh  verify_retrieval.py  verify_rome_citation.py
sql/: ingestion_queue.sql  schema.sql
terraform/: ec2.tf  ecr.tf  network.tf  variables.tf
tmp/: aggressive_recovery.sh  bio.txt  debug_judge.py  mock_ingest.py  recovery_userdata.sh  test_agent_chat.py  test_api_ingest.py  test_api_ingestion.txt  test_chat_integration.py  test_doc.txt  test_doc_unique.txt  test_guardrails.py  test_ingestion.txt  test_pipeline_run.py  test_rag.py  test_reranker.py  test_search.py  test_semantic.py  test_simhash.py  test_spacy.py  test_supabase.py
tmp/uploads/: ca8ab2f1-58b5-4791-97d7-5b05007e87eb.html  e7966969-6560-483b-a6a8-912be2ad7235.html
(+28 files in other folders)
