[tool.poetry]
name = "nexus"
version = "0.1.0"
description = "Project Nexus AI Foundation"
authors = ["Vibhor Kashmira"]
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
pydantic = "^2.10"
pydantic-settings = "^2.7"
qdrant-client = "^1.12"
supabase = "^2.13"
upstash-redis = "^1.2"
langfuse = "2.57.12"
python-dotenv = "^1.0"
unstructured = {extras = ["pdf"], version = "^0.15", python = ""}
simhash = "^2.0"
sentence-transformers = "^3.0"
tiktoken = "^0.7"
spacy = "^3.7"
yake = "^0.4"
ragas = "0.1.21"
datasets = "^2.19"
pandas = "^2.2"
# Added missing foundational dependencies
openai = "1.55.3"
anthropic = "0.40.0"
langgraph = ">=0.1.0,<0.2.0"
langchain = ">=0.2.0,<0.3.0"
langchain-core = ">=0.2.0,<0.3.0"
langchain-openai = ">=0.1.0"
langchain-community = ">=0.2.0,<0.3.0"
python-multipart = "^0.0.12"
aiohttp = "^3.10"
python-magic = "^0.4.27"
pypdf = "^5.1.0"
numpy = "1.26.4"
torch = ">=2.0.0"
transformers = "^4.40.0"
presidio-analyzer = "^2.2.351"
presidio-anonymizer = "^2.2.351"
better-profanity = "^0.7.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"
ruff = "^0.4"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "E402", "E701", "RUF006", "RUF013", "SIM103", "SIM108", "SIM117", "B904", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
